--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -74,8 +74,9 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Học Tập</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="@Url.Action("Index", "TraCuuLichHoc")" class="dropdown-item">Lịch Học</a>
-                        <a href="@Url.Action("Index", "TraCuu")" class="dropdown-item">Xem Lớp học đang chiêu sinh</a>
+                        <a href="@Url.Action("Index", "TraCuuLichHoc")" class="dropdown-item">Tra Cứu Lịch Học</a>
+                        <a href="@Url.Action("Index", "TraCuuChungChi")" class="dropdown-item">Tra Cứu Chứng Chỉ</a>
+                        <a href="@Url.Action("Index", "LopHocChieuSinh")" class="dropdown-item">Xem Lớp học đang chiêu sinh</a>
                     </div>
                 </div>
             </div>
